--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-xhr-backend": "^3.2.2",
+    "ionicons": "^7.3.0",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-ionicons": "^4.2.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-spring": "^9.7.3",
@@ -34,6 +36,7 @@
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@ionic/react": "^7.8.1",
     "@types/node": "^20.11.21",
     "@types/react": "^18.2.56",
     "@types/react-copy-to-clipboard": "^5.0.7",
