--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ VITE_SV_API_URL = "http://127.0.0.1:5000/api/v1"
 VITE_SOCKET_LOGIN_URL="http://127.0.0.1:5000"
 #SERVER
 VITE_SV_HOST="http://127.0.0.1:5000"
+#WEBSITE_URL
+VITE_WEBSITE_URL="http://localhost:5173"
 #BANK_ACCOUNT
 VITE_BANK_ID = "103881110994"
 VITE_BANK_NAME = "NGUY PHU QUY"
